# AssetOpsBench

./: .gitignore  README.md  benchmarking_direct.json  benchmarking_fmsr_direct.jsonl  benchmarking_mcp.json  benchmarking_mcp.jsonl  plot_timing_heatmap.py  pyproject.toml  time_fmsr_utterance.py  upload_results_to_wandb.py
artifacts/timing/: fmsr_utterance_plan_execute.json
benchmarking_runs/fmsr_comparison/: drive.sh  findings.md  fmsr_direct.jsonl  fmsr_direct_scored.jsonl  fmsr_mcp.jsonl  fmsr_mcp_scored.jsonl  report.md
eval_results/baseline-llama4/: eval_20260406-180338.json  eval_20260406-182023.json
eval_results/baseline-maverick-no-topology-37/: eval_20260406-210404.json
eval_results/hero-maverick-topology-v1/: eval_20260406-184118.json
profiling/: __init__.py  benchmark_runner.py  charts.py  config.py  deepseek_quantization_analysis.md  fix1_placeholder_resolution.md  fix2_prefetch_db_context.md  fix3_parallel_nm_mapping.md  fix_quantization_analysis.md  gemma_quantization_analysis.md  granite_quantization_analysis.md  ground_truth.py  instrumented_llm.py  instrumented_runner.py  mcp_tools.py  performance_analysis.md  qwen_quantization_analysis.md  run.py  scenario_loader.py  synthetic_fmsr_scenarios.json  tsfm_profiler.py  wandb_logger.py
profiling/results/: agenthive_101_fmsr.json  agenthive_102_fmsr.json  agenthive_103_fmsr.json  agenthive_104_fmsr.json  agenthive_105_fmsr.json  agenthive_1_iot.json  agenthive_201_tsfm.json  agenthive_202_tsfm.json  agenthive_203_tsfm.json  agenthive_204_tsfm.json  agenthive_205_tsfm.json  agenthive_2_iot.json  agenthive_3_iot.json  agenthive_400_wo.json  agenthive_401_wo.json  agenthive_402_wo.json  agenthive_403_wo.json  agenthive_404_wo.json  agenthive_4_iot.json  agenthive_5_iot.json  metaagent_101_fmsr.json  metaagent_101_fmsr_deepseek-quant-fp16.json  metaagent_101_fmsr_deepseek-quant-int4.json  metaagent_101_fmsr_deepseek-quant-int8.json  metaagent_101_fmsr_fmsr-fix2-prefetch.json  metaagent_101_fmsr_fmsr-fix2-test.json  metaagent_101_fmsr_fmsr-fix3-120-rerun-1.json  metaagent_101_fmsr_fmsr-fix3-120-rerun-10.json  metaagent_101_fmsr_fmsr-fix3-120-rerun-2.json  metaagent_101_fmsr_fmsr-fix3-120-rerun-3.json  metaagent_101_fmsr_fmsr-fix3-120-rerun-4.json  metaagent_101_fmsr_fmsr-fix3-120-rerun-5.json  metaagent_101_fmsr_fmsr-fix3-120-rerun-6.json  metaagent_101_fmsr_fmsr-fix3-120-rerun-7.json  metaagent_101_fmsr_fmsr-fix3-120-rerun-8.json  metaagent_101_fmsr_fmsr-fix3-120-rerun-9.json  metaagent_101_fmsr_fmsr-fix3-parallel.json  metaagent_101_fmsr_fmsr-quant-fp16.json  metaagent_101_fmsr_fmsr-quant-int4.json  metaagent_101_fmsr_fmsr-quant-int8.json  (+367 more)
src/benchmarking/: README.md  analyze.py  analyze_fmsr.py  bench_fmsr.py  bench_hardware.py  bench_instrumentation.py  bench_opt0.py  bench_opt2.py  bench_plots.py  bench_stats.py  eval_fmsr.py  run_direct.py  (+4 more)
(+61 files in other folders)
